Fix markup bug related to EventForm markup on small screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -213,6 +213,7 @@ body {
 
 .event-form__row {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .event-form__row-item {
